# Prosjekt

./: Bomb.cpp  Bomb.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Egg.cpp  Egg.h  LaserTurtleWindow.cpp  LaserTurtleWindow.h  README.md  backgroundGenerator.cpp  backgroundGenerator.h  banned_phrases.txt  constants.h  eggsManager.cpp  eggsManager.h  explotionManager.cpp  explotionManager.h  gameRunner.cpp  gameRunner.h  laserCannon.cpp  laserCannon.h  main.cpp  mainPage.cpp  mainPage.h  meson.build  numBomb.cpp  numBomb.h  numQuestion.h  pageMode.h  quary.h  question.h  questionBoxClass.cpp  questionBoxClass.h  readKeyInput.cpp  readKeyInput.h  textBomb.h  typingScreen.cpp  typingScreen.h  vcpkg-configuration.json  (+2 more)
GUI/: Button.h  Color.h  Window
headers/: Bomb.h  LaserTurtleWindow.h  constants.h  eggsManager.h  explotionManager.h  gameRunner.h  readKeyInput.h  textBomb.h  typingScreen.h
images/explotion_animtion2/: animationsplit.pptx
include/: Bomb.h  LaserTurtleWindow.h  difficulty.h  explotionManager.h  gameRunner.h  numBomb.h  pageMode.h
src/: Bomb.cpp  eggsManager.cpp  gameRunner.cpp  main.cpp  numBomb.cpp  textBomb.cpp  typingScreen.cpp
